# firehose-splunk-tf-module

./: LICENSE  README.md  main.tf  untested_example.tf  untested_example_config.yaml
.github/: dependabot.yaml
.github/workflows/: pull-request-sast.yaml  pull-request-semver-tag-merge.yaml
docs/: data_formats.md
lambdas/: aws_template.py  aws_template_without_sas.py  existing_template.py
lambdas/process_failures_lambda/: README.md  pyproject.toml
lambdas/process_failures_lambda/tests/: test_lambda_handler.py
lambdas/reingestion_lambda/: .gitignore  README.md  pyproject.toml
lambdas/reingestion_lambda/src/mbtp_splunk_cloudwatch_reingestion/: handler.py
lambdas/reingestion_lambda/tests/: test_lambda_handler.py
lambdas/transformation_lambda/: .gitignore  README.md  package.sh  pyproject.toml  requirements.txt
lambdas/transformation_lambda/tests/: test_config_import.py  test_lambda_handler.py  test_log_processing.py  test_log_transformation.py  test_pre_reingest.py  test_reingest_records.py
modules/s3_bucket/: README.md  kms.tf  main.tf  outputs.tf  variables.tf
modules/splunk_cloudwatch_ingestion/: README.md  _data.tf  _defaults.tf  _output.tf  _variables.tf  bucket_notifications.tf  config.tf  config.yaml  data.tf  firehose.tf  iam.tf  kms.tf  lambda.tf  log_group.tf  monitoring.tf  output.tf  process_failures_lambda.tf  reingestion_lambda.tf  sns.tf  sqs.tf  transform_lambda.tf  variables.tf
modules/subscription_filters/: README.md  _data.tf  _variables.tf  data.tf  iam.tf  subscription-filter.tf  variables.tf
(+2 files in other folders)
